# ai_haskell_homeworks

./: README.md
cancer/: Main.hs  README.md  breast-cancer.arff  cancer.cabal
flowers/: Main.hs  README.md  flowers.cabal
frogs/: README.md  frogs_naive.hs  frogs_optimal.hs
knapsack/: README.md  knapsack.hs
queens/: README.md  queens.hs
sliding_puzzle/: README.md  sliding_puzzle.hs  sliding_puzzle_optimal.hs
tictac/: README.md  tictac.cabal  tictac.hs
tictac/web/: index.html  main.js  style.css
