name:                cancer
version:             0.1.0.0
synopsis:            Implementation of ID3 for the breast cancer dataset
-- description:         
license:             MIT
-- license-file:        LICENSE
author:              Angel Angelov
maintainer:          hextwoa@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable cancer
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10, MissingH >= 1.4, parsec >= 3.1
                     , either-unwrap >= 1.1, vector >= 0.11, random >= 1.1
                     , random-shuffle >= 0.0.4, unordered-containers >= 0.2
  -- hs-source-dirs:      
  default-language:    Haskell2010

  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
